syntax = "proto3";

package stock_goods;

option go_package = "./protoc";

message StockOpGoodsID{
  int64 goods_id = 1;
}

message StockGoodsData{
  int64 goods_id = 1;
  int64 goods_num = 2;
}

message GetGoodsStockRequest{
  repeated StockOpGoodsID goodsIDList = 1;
}

message GetGoodsStockResponse{
  int64 states = 1;
  repeated StockGoodsData GoodsStockList = 2;
}

service StockOp{
  rpc GetGoodsStockByGoodsIDList(GetGoodsStockRequest) returns (GetGoodsStockResponse);
}