syntax = "proto3";

package stock_goods;

option go_package = "./protoc";

message GetGoodsStockIDList{
  int64 goods_id = 1;
}

message GetGoodsStockDataList{
  int64 goods_id = 1;
  int64 goods_num = 2;
}

message GetGoodsStockListRequest{
  repeated GetGoodsStockIDList goodsIDList = 1;
}

message GetGoodsStockListResponse{
  int64 states = 1;
  repeated GetGoodsStockDataList GoodsStockList = 2;
}

service GetGoodsStockList{
  rpc GetGoodsStockByGoodsIDList(GetGoodsStockListRequest) returns (GetGoodsStockListResponse);
}